compiler/tools/fpp-check/test/numeric_shift/shift_float_value_error.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/numeric_shift/shift_float_value_error.fpp:1.18
constant a = 1.5 << 2
                 ^
error: cannot convert F64 to an integer type
